# Jade

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
backup/: ApplicationBase.hpp  GraphicsContext.hpp  Image.cpp  Image.hpp  ImguiContext.cpp  ImguiContext.hpp  old_Window.cpp  old_Window.hpp
backup/renderer/: BufferLayout.cpp  BufferLayout.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderApi.hpp  Renderer.cpp  ShaderCommon.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.hpp
cmake/: imgui.cmake  shaders.cmake  vulkan.cmake
examples/: CMakeLists.txt
examples/directx/: CMakeLists.txt
examples/directx/basic_window/: CMakeLists.txt  main.cpp
examples/directx/directx_sandbox/: CMakeLists.txt  main.cpp
examples/opengl/: CMakeLists.txt
examples/opengl/app_with_renderer/: CMakeLists.txt  main.cpp
examples/opengl/basic_app/: CMakeLists.txt  main.cpp
examples/opengl/basic_program/: CMakeLists.txt  main.cpp
examples/opengl/basic_window/: CMakeLists.txt  main.cpp
examples/opengl_sandbox/: CMakeLists.txt  main.cpp
examples/vulkan/: CMakeLists.txt
examples/vulkan/basic_app/: CMakeLists.txt  main.cpp
examples/vulkan/basic_window/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Timer.hpp  application.hpp  events.hpp  layer.hpp  window.hpp
src/directx/: CMakeLists.txt  Window.cpp  Window.hpp
src/opengl/: BufferLayout.cpp  BufferLayout.hpp  CMakeLists.txt  GraphicsContext.cpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderApi.cpp  RenderApi.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderCommon.hpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp
src/opengl/application/: CMakeLists.txt  opengl_application.cpp  opengl_application.hpp
src/opengl/renderer/: BufferLayout.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  IndexBuffer.cpp  RenderApi.cpp  RenderApi.hpp  Renderer.cpp  Renderer.hpp  RendererStatistics.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/opengl/renderer/shaders/: quad.frag  quad.vert
src/opengl/shaders/: quad.vert
src/opengl/ui/: CMakeLists.txt
src/opengl/window/: ApplicationBase.hpp  CMakeLists.txt  Events.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Image.cpp  Image.hpp  ImguiContext.cpp  ImguiContext.hpp  TimeStepper.hpp  Window.cpp  Window.hpp  opengl_window.cpp  opengl_window.hpp
src/vulkan/: CMakeLists.txt
src/vulkan/application/: CMakeLists.txt  vulkan_application.cpp  vulkan_application.hpp
src/vulkan/window/: CMakeLists.txt  vulkan_window.cpp  vulkan_window.hpp
