string(TOLOWER ${GFXLIB_BACKEND} GFXLIB_BUILD_LOWER)
if(GFXLIB_BUILD_LOWER STREQUAL "opengl")
    message(STATUS "Setting up gfxlib OPENGL examples.")
    add_subdirectory(opengl)
elseif(GFXLIB_BUILD_LOWER STREQUAL "vulkan")
    message(STATUS "Setting up gfxlib VULKAN examples.")
    add_subdirectory(vulkan)
elseif(GFXLIB_BUILD_LOWER STREQUAL "directx")
    message(STATUS "Setting up gfxlib DIRECTX examples.")
    add_subdirectory(directx)
else()
    message(FATAL_ERROR "Incorrect library type given. Must be one of 'opengl', 'vulkan' or 'directx'")
endif()

