string(TOLOWER ${GFXLIB_BUILD} GFXLIB_BUILD_LOWER)
if(GFXLIB_BUILD_LOWER STREQUAL "opengl")
    message(STATUS "Setting up gfxlib using OPENGL.")
    add_subdirectory(opengl)
elseif(GFXLIB_BUILD_LOWER STREQUAL "vulkan")
    message(STATUS "Setting up gfxlib using VULKAN.")
    add_subdirectory(vulkan)
elseif(GFXLIB_BUILD_LOWER STREQUAL "directx")
    message(STATUS "Setting up gfxlib using DIRECTX.")
    add_subdirectory(directx)
else()
    message(FATAL_ERROR "Incorrect library type given. Must be one of 'opengl', 'vulkan' or 'directx'")
endif()