add_subdirectory(common)

string(TOLOWER ${JADE_BACKEND} JADE_BUILD_LOWER)
if(JADE_BUILD_LOWER STREQUAL "opengl")
    message(STATUS "Setting up Jade using OPENGL.")
    add_subdirectory(opengl)
elseif(JADE_BUILD_LOWER STREQUAL "vulkan")
    message(STATUS "Setting up Jade using VULKAN.")
    add_subdirectory(vulkan)
elseif(JADE_BUILD_LOWER STREQUAL "directx")
    message(STATUS "Setting up Jade using DIRECTX.")
    add_subdirectory(directx)
else()
    message(FATAL_ERROR "Incorrect library type given. Must be one of 'opengl', 'vulkan' or 'directx'")
endif()